Thu Jun 16 17:54:39 BST 2005  Olly Betts <olly@survex.com>

	* bin/Makefile.am,bin/xapian-compact.cc: Added new "xapian-compact"
	  program which can compact and merge flint databases in a similar
	  way to how quartzcompact does for quartz databases.

Thu Jun 16 01:22:45 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Check for spaces in build directory, source directory,
	  or install prefix and die with a helpful message.

Wed Jun 15 01:00:11 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_lock.cc: It seems we need to explicitly kill
	  the child process.  Otherwise when we have two databases locked
	  just closing the connection doesn't cause the child to die.  I
	  don't understand why it's needed, but this fix is at least clean.

Mon Jun 13 00:13:33 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_alltermslist.cc,
	  backends/flint/flint_alltermslist.h,
	  backends/flint/flint_database.cc: Rewrite of FlintAllTermsList
	  with several fewer member variables.  Also fixes a bug (the old
	  version wasn't ignoring the metainfo entry so tests were failing).

Sun Jun 12 13:08:16 BST 2005  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_alltermslist.cc: Disable assertion which is
	  incorrect in a corner case.
	* tests/api_db.cc: Add test_specialterms2 as a regression test.

Sun Jun 12 02:03:52 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_positionlist.cc: Encoding and decoding of
	  position list size, and first and last entries didn't match.
	  Reworked to match using a slightly smaller encoding.
	* backends/flint/flint_metafile.cc: Bumped format version.

Sun Jun 12 02:02:35 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc: We were failing to append "DB" to the
	  path when opening a table for reading - fixed.

Sun Jun 12 02:00:30 BST 2005  Olly Betts <olly@survex.com>

	* testsuite/backendmanager.cc: When a flint database was requested, we